--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           key: ${{ secrets.KEY }}
 #          port: ${{ secrets.PORT }}
           source: ${{ steps.changed-files.outputs.all_changed_files }}
-          target: my-praktikum-bot
+          target: ${{ env.SERVER_FOLDER_PATH }}
 
   deploy:
     name: Rebuilding a project on a remote server
