--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,7 @@ jobs:
         with:
           since_last_remote_commit: true
           separator: ","
-      - name: View env
-        run: echo $SERVER_FOLDER_PATH
+
       - name: copy files to server
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -35,6 +34,8 @@ jobs:
 #          port: ${{ secrets.PORT }}
           source: ${{ steps.changed-files.outputs.all_changed_files }}
           target: ${{ env.SERVER_FOLDER_PATH }}
+          files_ignore: |
+            {.github, .gitignore}/**
 
   deploy:
     name: Rebuilding a project on a remote server
@@ -48,7 +49,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            cd $SERVER_FOLDER_PATH
+            cd ${{ env.SERVER_FOLDER_PATH }}
             docker compose down
             docker compose up --build
 
