feat: Added ci/cd.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ permissions:
   contents: read
 
 env:
-  SERVER_FOLDER_PATH: my-praktikum-bot
+  SERVER_FOLDER_PATH: exchange-calculator
 
 jobs:
   copy-changes:
