--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           since_last_remote_commit: true
           separator: ","
           files_ignore: |
-            .github
+            .github/
             .gitignore
 
       - name: copy files to server
