feat: update github actions.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
             cd ${{ env.SERVER_FOLDER_PATH }}
             docker build -t calculator-exchange .
 #            docker run --rm -e PYTHONUNBUFFERED=1 calculator-exchange
-            docker run --rm -d calculator-exchange
+            docker run -d --rm calculator-exchange
 
 
   send_message_to_telegram:
